Fix section's items alignament

--- a/src/assets/scss/globals/sections.scss
+++ b/src/assets/scss/globals/sections.scss
@@ -2,6 +2,10 @@
 @mixin base-setion {
   height: auto;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 .section {
   @include base-setion;
